new column add to student_details table "tutor group"-tutorgrp adjust spelling mistake in helper file lowercase all column names on student deta

--- a/app/views/student_details/_form.html.erb
+++ b/app/views/student_details/_form.html.erb
@@ -13,15 +13,19 @@
 
   <div class="field">
     <%= f.label :Student_First_Name %><br />
-    <%= f.text_field :stufirName %>
+    <%= f.text_field :stufirname %>
   </div>
   <div class="field">
     <%= f.label :Student_Surname %><br />
-    <%= f.text_field :stusurName %>
+    <%= f.text_field :stusurname %>
   </div>
   <div class="field">
     <%= f.label :Date_of_Birth %><br />
     <%= f.date_select :dob %>
+  </div>
+  <div class="field">
+    <%= f.label :Tutor_Group %><br />
+    <%= f.text_field :tutorgrp %>
   </div>
   <div class="field">
     <%= f.label :Student_Special_Number %><br />
