--- a/app/views/student_details/show.html.erb
+++ b/app/views/student_details/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Student First Name:</b>
-  <%= @student_detail.stufirName %>
+  <%= @student_detail.stufirname %>
 </p>
 
 <p>
   <b>Student Surname:</b>
-  <%= @student_detail.stusurName %>
+  <%= @student_detail.stusurname %>
 </p>
 
 <p>
@@ -18,6 +18,11 @@
 <p>
   <b>Student Special Number:</b>
   <%= @student_detail.stunum %>
+</p>
+
+<p>
+  <b>Student Tutor Group:</b>
+  <%= @student_detail.tutorgrp %>
 </p>
 
 <p>
