--- a/app/views/student_details/_studentnames.html.erb
+++ b/app/views/student_details/_studentnames.html.erb
@@ -2,10 +2,11 @@
 <%= hidden_field_tag :sort, params[:sort] %>
 <table class="studenttable">
   <tr>
-    <th><%= sortable "stufirName","Student First Name" %> |</th>
-    <th><%= sortable "stusurName","Student Surname" %> |</th>
+    <th><%= sortable "stufirname","Student First Name" %> |</th>
+    <th><%= sortable "stusurname","Student Surname" %> |</th>
     <th><%= sortable "dob","Date of Birth" %>|</th>  
     <th><%= sortable "stunum","Student Special Number" %>|</th>
+    <th><%= sortable "tutorgrp","Student Tutor Group" %>|</th>
     <th>Student Picture |</th>
     <th></th>
     <th></th>
@@ -14,9 +15,10 @@
 
 <% @student_details.each do |student_detail| %>
   <tr>
-    <td><%= student_detail.stufirName %></td>
-    <td><%= student_detail.stusurName %></td>
+    <td><%= student_detail.stufirname %></td>
+    <td><%= student_detail.stusurname %></td>
     <td><%= student_detail.dob %></td>
+    <td><%= student_detail.tutorgrp %></td>
     <td><%= student_detail.stunum %></td>
     <td><%= image_tag student_detail.stupic_url(:thumb1).to_s %></td>
     <td><%= link_to 'Show', student_detail %></td>
