JQuery working with app - changes to the student partial name and sort arrows changed

--- a/app/views/student_details/_studetails.html.erb
+++ b/app/views/student_details/_studetails.html.erb
@@ -5,8 +5,8 @@
     <th><%= sortable "stufirname","Student First Name" %> |</th>
     <th><%= sortable "stusurname","Student Surname" %> |</th>
     <th><%= sortable "dob","Date of Birth" %>|</th>  
-    <th><%= sortable "stunum","Student Special Number" %>|</th>
     <th><%= sortable "tutorgrp","Student Tutor Group" %>|</th>
+    <th><%= sortable "stunum","Student Special Number" %>|</th>
     <th>Student Picture |</th>
     <th></th>
     <th></th>
@@ -14,7 +14,7 @@
   </tr>
 
 <% @student_details.each do |student_detail| %>
-  <tr>
+  <tr class="<%= cycle("even_row", "odd_row") -%>">
     <td><%= student_detail.stufirname %></td>
     <td><%= student_detail.stusurname %></td>
     <td><%= student_detail.dob %></td>
@@ -23,7 +23,7 @@
     <td><%= image_tag student_detail.stupic_url(:thumb1).to_s %></td>
     <td><%= link_to 'Show', student_detail %></td>
     <td><%= link_to 'Edit', edit_student_detail_path(student_detail) %></td>
-    <td><%= link_to 'Destroy', student_detail, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Destroy', student_detail, :confirm => 'Are you sure? The student and its results will be deleted permanently.!!', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
