--- a/app/views/student_details/index.js.erb
+++ b/app/views/student_details/index.js.erb
@@ -1,1 +1,1 @@
-$("#studentnames").html("<%= escape_javascript(render("student_details")) %>");
+$("#studetails").html("<%= escape_javascript(render("studetails")) %>");
