--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>StudentMetrics</title>
+  <title>Student Metrics</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "jquery" %>
+  <%= javascript_include_tag "jquery.min" %>
+  <%= javascript_include_tag "rails" %>
+
   <%= csrf_meta_tag %>
 </head>
-<body style="background: #EEE;">
+<body>
 
 <%= yield %>
 
